logs/Slang/generic/number/number_test_19.sv.log
name: number_test_19
description: Test
should_fail: 0
tags: 5.6.4 5.7.1 5.7.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_19.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_19.sv:7:25: error: unknown macro or compiler directive '`DIGITS'
parameter int foo = 16'b`DIGITS(bar);
                        ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/number/number_test_19.sv:7:37: error: expected vector literal digits
parameter int foo = 16'b`DIGITS(bar);
                                    ^
